Fixing Spacing (Nasir did this one :) like a boss)

--- a/src/style.css
+++ b/src/style.css
@@ -41,7 +41,7 @@ https://www.w3schools.com/css/default.asp
     border-color:rgb(50, 150, 50);
     padding-top: 10px;
     padding-bottom: 10px;
-    padding-left: 10px;
+    padding-left: 0px;
     padding-right: 10px;
     width:50%;
     transition-duration: 0.3s;
@@ -60,7 +60,7 @@ https://www.w3schools.com/css/default.asp
     border-color:rgb(50, 150, 50);
     padding-top: 10px;
     padding-bottom: 10px;
-    padding-left: 10px;
+    padding-left: 0px;
     padding-right: 10px;
     width:70%;
     transition-duration: 0.3s;
